refs #1 Convertidos a UTF-8

--- a/01_es.md
+++ b/01_es.md
@@ -1,124 +1,124 @@
 Como usar la API de Skycoin Explorer
 ====
 
-_Este tutorial muestra la manera más conveniente de usar la API de Skycoin Explorer_ ___en una computadora con Windows utilizando Skycoin Wallet.___ _Teniendo acceso a la API, usted puede_ ___comenzar a desarrollar aplicaciones que utilicen la conectividad con Skycoin Explorer.___
+_Este tutorial muestra la manera mÃ¡s conveniente de usar la API de Skycoin Explorer_ ___en una computadora con Windows utilizando Skycoin Wallet.___ _Teniendo acceso a la API, usted puede_ ___comenzar a desarrollar aplicaciones que utilicen la conectividad con Skycoin Explorer.___
 
-[Skycoin Explorer](https://explorer.skycoin.net) es una herramienta fantástica. Brinda la posibilidad de buscar una dirección, hash de bloque o número, o incluso un ID de transacción. ¿Se ha preguntado alguna vez quién es Sky-rico? Las billeteras del Top-20 se pueden consultar a través de la [Lista de Ricos](https://explorer.skycoin.net/app/richlist).
+[Skycoin Explorer](https://explorer.skycoin.net) es una herramienta fantÃ¡stica. Brinda la posibilidad de buscar una direcciÃ³n, hash de bloque o nÃºmero, o incluso un ID de transacciÃ³n. Â¿Se ha preguntado alguna vez quiÃ©n es Sky-rico? Las billeteras del Top-20 se pueden consultar a travÃ©s de la [Lista de Ricos](https://explorer.skycoin.net/app/richlist).
 
-Sin embargo, alguno de ustedes pudiera querer aprender a __usar la información que brinda Skycoin Explorer__. Por esa razón los desarrolladores de Skycoin Explorer le agregaron una __API a Skycoin Explorer__.
+Sin embargo, alguno de ustedes pudiera querer aprender a __usar la informaciÃ³n que brinda Skycoin Explorer__. Por esa razÃ³n los desarrolladores de Skycoin Explorer le agregaron una __API a Skycoin Explorer__.
 
-API significa __Interfaz de Programación de Aplicaciones__ (por sus siglas en inglés). Quizás haya escuchado sobre APIs anteriormente, debido a que la mayoría de los servicios las ofrecen. La idea de una API es brindar acceso a un servicio (lectura o incluso escritura).
+API significa __Interfaz de ProgramaciÃ³n de Aplicaciones__ (por sus siglas en inglÃ©s). QuizÃ¡s haya escuchado sobre APIs anteriormente, debido a que la mayorÃ­a de los servicios las ofrecen. La idea de una API es brindar acceso a un servicio (lectura o incluso escritura).
 
-### _La Documentación de la API de Skycoin Explorer_ ###
+### _La DocumentaciÃ³n de la API de Skycoin Explorer_ ###
 
-La API de Skycoin Explorer es descrita como una herramienta para interactuar con el ecosistema de Skycoin. Se puede encontrar la documentación completa aquí: [Documentación de la API de Skycoin Explorer](https://explorer.skycoin.net/api.html).
+La API de Skycoin Explorer es descrita como una herramienta para interactuar con el ecosistema de Skycoin. Se puede encontrar la documentaciÃ³n completa aquÃ­: [DocumentaciÃ³n de la API de Skycoin Explorer](https://explorer.skycoin.net/api.html).
 
-__¿Pero cómo se puede hacer uso de estas peticiones?__
+__Â¿Pero cÃ³mo se puede hacer uso de estas peticiones?__
 
 Paso 1: Usted necesita un Nodo Skycoin
 ----
 
-Es posible que alguno de ustedes haya escuchado sobre __Skyminer__. Un Skyminer es un __nodo Skycoin__. Usted puede comprar un Skyminer o construir uno usted mismo. Pero atención, ¡ni siquiera necesita uno!
+Es posible que alguno de ustedes haya escuchado sobre __Skyminer__. Un Skyminer es un __nodo Skycoin__. Usted puede comprar un Skyminer o construir uno usted mismo. Pero atenciÃ³n, Â¡ni siquiera necesita uno!
 
 Existen tres opciones para que usted ejecute un Nodo Skycoin:
 * [Compre](https://www.skycoin.net/skyminer/) un __Skyminer oficial__
 * Construya un __Skyminer usted mismo__
 * [Descargue](https://www.skycoin.net/downloads/) e instale __Skycoin Wallet__
 
-Sí, es así de simple: __Skycoin Wallet también le da acceso al Explorer__. Eso significa que ejecutar la Aplicación Skycoin Wallet __le da acceso a la API de Skycoin Explorer__.
+SÃ­, es asÃ­ de simple: __Skycoin Wallet tambiÃ©n le da acceso al Explorer__. Eso significa que ejecutar la AplicaciÃ³n Skycoin Wallet __le da acceso a la API de Skycoin Explorer__.
 
-__Para este tutorial, hemos seleccionado la opción de Skycoin Wallet__. Es fácil y no se necesita ningún hardware dedicado.
+__Para este tutorial, hemos seleccionado la opciÃ³n de Skycoin Wallet__. Es fÃ¡cil y no se necesita ningÃºn hardware dedicado.
 
-Usted puede descargar Skycoin Wallet aquí: [Skycoin Wallet](https://www.skycoin.net/downloads/). Después de iniciar por primera vez, tendrá que crear una billetera. __Por favor, almacene la semilla de su billetera de forma segura__.
+Usted puede descargar Skycoin Wallet aquÃ­: [Skycoin Wallet](https://www.skycoin.net/downloads/). DespuÃ©s de iniciar por primera vez, tendrÃ¡ que crear una billetera. __Por favor, almacene la semilla de su billetera de forma segura__.
 
 ![https://cdn-images-1.medium.com/max/800/1\*W1\_h3hZDoao0cX26OblXJg.png](https://cdn-images-1.medium.com/max/800/1*W1_h3hZDoao0cX26OblXJg.png)
-Asegúrese de almacenar la semilla de su billetera de forma segura
+AsegÃºrese de almacenar la semilla de su billetera de forma segura
 
 Paso 2: Encuentre el Puerto de su Nodo
 ----
 
-Por defecto, el nodo Skycoin debe estarse ejecutando en el Puerto 6420. Sin embargo, según mi experiencia no siempre es así.
+Por defecto, el nodo Skycoin debe estarse ejecutando en el Puerto 6420. Sin embargo, segÃºn mi experiencia no siempre es asÃ­.
 
-Si usted escribe localhost:6420 en la barra de dirección de su navegador y se muestra la interfaz de Skycoin Wallet, todo marcha bien y puede seguir al __Paso 3__. Si no es así, tenemos que encontrar __que puerto está usando Skycoin__.
+Si usted escribe localhost:6420 en la barra de direcciÃ³n de su navegador y se muestra la interfaz de Skycoin Wallet, todo marcha bien y puede seguir al __Paso 3__. Si no es asÃ­, tenemos que encontrar __que puerto estÃ¡ usando Skycoin__.
 
-Existen dos métodos (quizás más) para __encontrar el puerto en el que Skycoin Wallet está escuchando__.
+Existen dos mÃ©todos (quizÃ¡s mÃ¡s) para __encontrar el puerto en el que Skycoin Wallet estÃ¡ escuchando__.
 
-El más conveniente es presionar _Ctrl_ +_Shift_ + _I_ mientras se encuentre dentro de la aplicación Skycoin Wallet, y revisar la pestaña sources (Gracias [@bksquared1024](http://twitter.com/bksquared1024) por señalar ese método).
+El mÃ¡s conveniente es presionar _Ctrl_ +_Shift_ + _I_ mientras se encuentre dentro de la aplicaciÃ³n Skycoin Wallet, y revisar la pestaÃ±a sources (Gracias [@bksquared1024](http://twitter.com/bksquared1024) por seÃ±alar ese mÃ©todo).
 
 ![https://cdn-images-1.medium.com/max/800/1\*WYGdY3B6kIGSOCOaLoPOVA.png](https://cdn-images-1.medium.com/max/800/1*WYGdY3B6kIGSOCOaLoPOVA.png)
-El Puerto se puede ver en la pestaña sources
+El Puerto se puede ver en la pestaÃ±a sources
 
-Otra opción es usar el comando netstat.
+Otra opciÃ³n es usar el comando netstat.
 
-Abra el Símbolo del Sistema (Presione la tecla Windows, escriba "Símbolo del Sistema", haga clic derecho en la Aplicación Símbolo del Sistema y seleccione "Ejecutar como Administrador") e introduzca el comando
+Abra el SÃ­mbolo del Sistema (Presione la tecla Windows, escriba "SÃ­mbolo del Sistema", haga clic derecho en la AplicaciÃ³n SÃ­mbolo del Sistema y seleccione "Ejecutar como Administrador") e introduzca el comando
 
 ```bash
 netstat -b
 ```
 
-Busque la entrada __[skycoin.exe]__. Debe existir más de una.
+Busque la entrada __[skycoin.exe]__. Debe existir mÃ¡s de una.
 
 ![https://cdn-images-1.medium.com/max/800/1\*SJ2Crb2Uky\_EFWbVpu8FKw.png](https://cdn-images-1.medium.com/max/800/1*SJ2Crb2Uky_EFWbVpu8FKw.png)
-Debe haber varios procesos Skycoin.exe ejecutándose
+Debe haber varios procesos Skycoin.exe ejecutÃ¡ndose
 
-Si todo marcha bien debe mostrarse la aplicación Skycoin Wallet en su navegador al introducir esta dirección:
+Si todo marcha bien debe mostrarse la aplicaciÃ³n Skycoin Wallet en su navegador al introducir esta direcciÃ³n:
 
 ```
 http://localhost:su-numero-de-puerto/#/wallets
 ```
 
-Excelente, ¡hagamos ahora nuestra __primera llamada a la API__!
+Excelente, Â¡hagamos ahora nuestra __primera llamada a la API__!
 
 Paso 3: Haga su primera llamada a la API
 ----
 
-Ya hemos dejado atrás la parte difícil y ahora usted está listo para ejecutar las primeras llamadas a Skycoin Explorer. Después de revisar rápidamente la [Documentación de la API de Skycoin Explorer](https://explorer.skycoin.net/api.html) podemos __buscar una llamada interesante para comenzar__.
+Ya hemos dejado atrÃ¡s la parte difÃ­cil y ahora usted estÃ¡ listo para ejecutar las primeras llamadas a Skycoin Explorer. DespuÃ©s de revisar rÃ¡pidamente la [DocumentaciÃ³n de la API de Skycoin Explorer](https://explorer.skycoin.net/api.html) podemos __buscar una llamada interesante para comenzar__.
 
 ![https://cdn-images-1.medium.com/max/800/1\*oCZTKos6EDxo5DHkT8mnrw.png](https://cdn-images-1.medium.com/max/800/1*oCZTKos6EDxo5DHkT8mnrw.png)
-Obtengamos el número de suministro circulante como primera llamada a la API
+Obtengamos el nÃºmero de suministro circulante como primera llamada a la API
 
-Entonces decidí consultar el __suministro de monedas actual de Skycoin__. La documentación nos da dos posibles peticiones. __Como estamos trabajando con nuestro Nodo Skycoin local, entonces usamos la ruta interna del Nodo Skycoin, que es__
+Entonces decidÃ­ consultar el __suministro de monedas actual de Skycoin__. La documentaciÃ³n nos da dos posibles peticiones. __Como estamos trabajando con nuestro Nodo Skycoin local, entonces usamos la ruta interna del Nodo Skycoin, que es__
 
 ```
 /api/v1/coinSupply
 ```
 
-¡Tan solo escriba 
+Â¡Tan solo escriba 
 ```
 http://localhost:su-numero-de-puerto/api/v1/coinSupply
 ```
 y realice su primera llamada API exitosa!
 
 ![https://cdn-images-1.medium.com/max/800/1\*M8klV85pHICHhDqMysM7VQ.png](https://cdn-images-1.medium.com/max/800/1*M8klV85pHICHhDqMysM7VQ.png)
-/coinSupply brinda aún más información además de la existencia actual
+/coinSupply brinda aÃºn mÃ¡s informaciÃ³n ademÃ¡s de la existencia actual
 
-Como puede observar, /coinSupply no solo brinda el suministro actual __sino también información sobre el suministro total y máximo, el suministro de horas de moneda y las direcciones de distribución (des-)bloqueadas__.
+Como puede observar, /coinSupply no solo brinda el suministro actual __sino tambiÃ©n informaciÃ³n sobre el suministro total y mÃ¡ximo, el suministro de horas de moneda y las direcciones de distribuciÃ³n (des-)bloqueadas__.
 
-Paso de premio: Haga peticiones a través del Símbolo del Sistema
+Paso de premio: Haga peticiones a travÃ©s del SÃ­mbolo del Sistema
 ----
 
-Realizar una llamada a la API a través del Navegador es conveniente, pero _usar el Símbolo del Sistema nos brinda más opciones_. Usamos el comando _curl_ para realizar una llamada a la API:
+Realizar una llamada a la API a travÃ©s del Navegador es conveniente, pero _usar el SÃ­mbolo del Sistema nos brinda mÃ¡s opciones_. Usamos el comando _curl_ para realizar una llamada a la API:
 
 ```bash
 curl http://localhost:su-numero-de-puerto/api/v1/coinSupply
 ```
 
-Este comando devuelve la misma información que ya obtuvimos antes, ¿entonces cómo podemos extraer información específica? Para ello usamos [findstr](https://docs.microsoft.com/en-us/windows-server/administration/windows-commands/findstr):
+Este comando devuelve la misma informaciÃ³n que ya obtuvimos antes, Â¿entonces cÃ³mo podemos extraer informaciÃ³n especÃ­fica? Para ello usamos [findstr](https://docs.microsoft.com/en-us/windows-server/administration/windows-commands/findstr):
 
 ```bash
 curl http://localhost:su-numero-de-puerto/api/v1/coinSupply | findstr "current_supply"
 ```
 
-devuelve solo una línea:
+devuelve solo una lÃ­nea:
 
 ![https://cdn-images-1.medium.com/max/800/1\*RxPZcZGj73p3f5hARNlKKg.png](https://cdn-images-1.medium.com/max/800/1*RxPZcZGj73p3f5hARNlKKg.png)
-findstr devuelve solo una línea
+findstr devuelve solo una lÃ­nea
 
-Conclusión
+ConclusiÃ³n
 ----
 
-Los desarrolladores de Skycoin nos han dado la posibilidad de realizar llamadas a la API de Skycoin Explorer, __¡entonces debemos usarlas!__ El objetivo de este tutorial era mostrar cómo realizar las primeras llamadas y __cuán fácil se puede llevar a cabo usando Skycoin Wallet__.
+Los desarrolladores de Skycoin nos han dado la posibilidad de realizar llamadas a la API de Skycoin Explorer, __Â¡entonces debemos usarlas!__ El objetivo de este tutorial era mostrar cÃ³mo realizar las primeras llamadas y __cuÃ¡n fÃ¡cil se puede llevar a cabo usando Skycoin Wallet__.
 
-Si le gustó la información ofrecida usted puede __enviarme alguna donación__ (Sky: 2BAEQ9tdibebL5XrozW4nQ7ciu4JnFXhcAS). Si tiene alguna inquietud o recomendaciones, __¡me gustaría leer su comentario!__
+Si le gustÃ³ la informaciÃ³n ofrecida usted puede __enviarme alguna donaciÃ³n__ (Sky: 2BAEQ9tdibebL5XrozW4nQ7ciu4JnFXhcAS). Si tiene alguna inquietud o recomendaciones, __Â¡me gustarÃ­a leer su comentario!__
 
 
