--- a/02_es.md
+++ b/02_es.md
@@ -1,73 +1,73 @@
-Conectar una Aplicación Node.js a la API de Skycoin Explorer
+Conectar una AplicaciÃ³n Node.js a la API de Skycoin Explorer
 ====
 
-¿Alguna vez ha deseado __programar su propio Skycoin Explorer__? Pues bien, ¡puede hacerlo! En este tutorial le mostraré como conectar Node.js a la API de Skycoin Explorer.
+Â¿Alguna vez ha deseado __programar su propio Skycoin Explorer__? Pues bien, Â¡puede hacerlo! En este tutorial le mostrarÃ© como conectar Node.js a la API de Skycoin Explorer.
 
 ![https://cdn-images-1.medium.com/max/800/1\*nC-x1EUCS5kc89LHV5mvng.gif](https://cdn-images-1.medium.com/max/800/1*nC-x1EUCS5kc89LHV5mvng.gif)
-¿Interesado? ¡Continúe leyendo y encontrará como hacerlo usted mismo!
+Â¿Interesado? Â¡ContinÃºe leyendo y encontrarÃ¡ como hacerlo usted mismo!
 
-Para comenzar es necesario tener a su disposición un Nodo Skycoin ejecutándose. Si no lo tiene visite mi [tutorial anterior](https://medium.com/@iaufmc39/how-to-use-the-skycoin-explorer-api-160577347e30) (solo necesita tener Skycoin Wallet ejecutándose en su computadora)
+Para comenzar es necesario tener a su disposiciÃ³n un Nodo Skycoin ejecutÃ¡ndose. Si no lo tiene visite mi [tutorial anterior](https://medium.com/@iaufmc39/how-to-use-the-skycoin-explorer-api-160577347e30) (solo necesita tener Skycoin Wallet ejecutÃ¡ndose en su computadora)
 
-__¿Ya tiene instalado Node.js y un IDE? ¡Avance hasta el Paso 4!__
+__Â¿Ya tiene instalado Node.js y un IDE? Â¡Avance hasta el Paso 4!__
 
-### _¿Qué es la API de Skycoin Explorer?_ ###
+### _Â¿QuÃ© es la API de Skycoin Explorer?_ ###
 
-API significa Interfaz de Programación de Aplicaciones (por sus siglas en inglés) y Wikipedia la describe como un conjunto de definiciones de subrutinas, protocolos de comunicación y __herramientas para construir software__. En pocas palabras: __utilizar la API de Skycoin Explorer le permite realizar peticiones específicas para obtener información de la Blockchain de Skycoin__.
+API significa Interfaz de ProgramaciÃ³n de Aplicaciones (por sus siglas en inglÃ©s) y Wikipedia la describe como un conjunto de definiciones de subrutinas, protocolos de comunicaciÃ³n y __herramientas para construir software__. En pocas palabras: __utilizar la API de Skycoin Explorer le permite realizar peticiones especÃ­ficas para obtener informaciÃ³n de la Blockchain de Skycoin__.
 
 Algunas peticiones de ejemplo pueden ser:
-* __/api/coinSupply__: Devuelve metadatos sobre la distribución de la moneda
-* __/api/richlist__: devuelve las N billeteras más ricas según la cantidad de moneda
-* __/api/addresscount__: devuelve la cantidad de direcciones únicas con recursos sin agotar
+* __/api/coinSupply__: Devuelve metadatos sobre la distribuciÃ³n de la moneda
+* __/api/richlist__: devuelve las N billeteras mÃ¡s ricas segÃºn la cantidad de moneda
+* __/api/addresscount__: devuelve la cantidad de direcciones Ãºnicas con recursos sin agotar
 
-### _¿Por qué debería usted conectar la API de Skycoin Explorer a un servidor Node.js?_ ###
+### _Â¿Por quÃ© deberÃ­a usted conectar la API de Skycoin Explorer a un servidor Node.js?_ ###
 
-¿Recuerda usted el sitio web oficial del explorador <https://explorer.skycoin.net>? Pues este es un sitio web regular y __realiza llamadas a la API__ de Skycoin Explorer de algún nodo Skycoin. __Usted podría crear su propia implementación de Skycoin Explorer__ o podría crear un sitio web que monitoree el suministro circulante de Skycoins. 
+Â¿Recuerda usted el sitio web oficial del explorador <https://explorer.skycoin.net>? Pues este es un sitio web regular y __realiza llamadas a la API__ de Skycoin Explorer de algÃºn nodo Skycoin. __Usted podrÃ­a crear su propia implementaciÃ³n de Skycoin Explorer__ o podrÃ­a crear un sitio web que monitoree el suministro circulante de Skycoins. 
 
-### _¿Por qué seleccionar Node.js?_ ###
+### _Â¿Por quÃ© seleccionar Node.js?_ ###
 
-Node.js es un ambiente de ejecución de JavaScript en servidores. Es muy fácil ejecutar un servidor y puede hacerse localmente.
+Node.js es un ambiente de ejecuciÃ³n de JavaScript en servidores. Es muy fÃ¡cil ejecutar un servidor y puede hacerse localmente.
 
-Si selecciona cualquier otro mecanismo (Apache, Nginx, PHP) también puede hacerlo y aun así seguir este tutorial solo con algunos cambios menores. ¡Y también me gustaría leer su tutorial sobre cómo hacerlo de esa otra forma!
+Si selecciona cualquier otro mecanismo (Apache, Nginx, PHP) tambiÃ©n puede hacerlo y aun asÃ­ seguir este tutorial solo con algunos cambios menores. Â¡Y tambiÃ©n me gustarÃ­a leer su tutorial sobre cÃ³mo hacerlo de esa otra forma!
 
 Paso 1: El nodo Skycoin
 ----
 
-Como ya he mencionado con anterioridad: por favor siga estas instrucciones y asegúrese de probar las primeras peticiones utilizando su navegador. Si estas pruebas funcionan, ¡excelente! Continúe con el paso 2. Si estas no funcionan, déjeme un mensaje o ¡únase a las comunidades de Skycoin de Telegram!
+Como ya he mencionado con anterioridad: por favor siga estas instrucciones y asegÃºrese de probar las primeras peticiones utilizando su navegador. Si estas pruebas funcionan, Â¡excelente! ContinÃºe con el paso 2. Si estas no funcionan, dÃ©jeme un mensaje o Â¡Ãºnase a las comunidades de Skycoin de Telegram!
 
 Paso 2: Instale Node.js
 ----
 
-La instalación de Node.js es muy sencilla. Para este tutorial yo utilizo OS X pero usted puede usar Windows o Linux – el resultado debe ser el mismo.
+La instalaciÃ³n de Node.js es muy sencilla. Para este tutorial yo utilizo OS X pero usted puede usar Windows o Linux â€“ el resultado debe ser el mismo.
 
 ![https://cdn-images-1.medium.com/max/800/1\*kgIf3rZtzr64nlsM8OrmGA.png](https://cdn-images-1.medium.com/max/800/1*kgIf3rZtzr64nlsM8OrmGA.png)
-Recuerde, yo utilicé una máquina con OS X (macOS). Si usted utiliza Windows, seleccione la descarga para Windows.
+Recuerde, yo utilicÃ© una mÃ¡quina con OS X (macOS). Si usted utiliza Windows, seleccione la descarga para Windows.
 
-1. Vaya a <https://nodejs.org> y haga clic en el botón de descarga indicado para su caso
+1. Vaya a <https://nodejs.org> y haga clic en el botÃ³n de descarga indicado para su caso
 2. haga doble-clic sobre el archivo descargado y deje que el instalador se encargue del resto por usted
-3. verifique la instalación tecleando
+3. verifique la instalaciÃ³n tecleando
 
 ```bash
 node -v
 ```
 
-en el Terminal (Símbolo del Sistema en Windows). Si devuelve un número de versión, ¡usted está __listo para continuar__!
+en el Terminal (SÃ­mbolo del Sistema en Windows). Si devuelve un nÃºmero de versiÃ³n, Â¡usted estÃ¡ __listo para continuar__!
 
 ![https://cdn-images-1.medium.com/max/800/1\*s\_9UwWn1dfN5mOSPb3-q5Q.png](https://cdn-images-1.medium.com/max/800/1*s_9UwWn1dfN5mOSPb3-q5Q.png)
-¿node -v devuelve un número de versión? ¡Lo ha conseguido!
+Â¿node -v devuelve un nÃºmero de versiÃ³n? Â¡Lo ha conseguido!
 
 Paso 3: Configure su ambiente de desarrollo
 ----
 
-Ahora debemos decidir __qué IDE vamos a usar__. ¿Se pregunta qué es un IDE? IDE significa Ambiente de Desarrollo Integrado y debe entenderlo como un editor de texto que lo ayuda a programar mejor (funcionalidades básicas como resaltado de sintaxis además de muchas otras).
+Ahora debemos decidir __quÃ© IDE vamos a usar__. Â¿Se pregunta quÃ© es un IDE? IDE significa Ambiente de Desarrollo Integrado y debe entenderlo como un editor de texto que lo ayuda a programar mejor (funcionalidades bÃ¡sicas como resaltado de sintaxis ademÃ¡s de muchas otras).
 
-__Mi primera opción para programación web es Atom Editor: <https://atom.io/>__
+__Mi primera opciÃ³n para programaciÃ³n web es Atom Editor: <https://atom.io/>__
 
-Sin embargo, usted puede seleccionar cualquier otra opción que desee como Sublime, Brackets, Visual Studio o tan solo el editor de texto por defecto en su computadora.
+Sin embargo, usted puede seleccionar cualquier otra opciÃ³n que desee como Sublime, Brackets, Visual Studio o tan solo el editor de texto por defecto en su computadora.
 
-Paso 4: Cree su primera aplicación Node.js
+Paso 4: Cree su primera aplicaciÃ³n Node.js
 ----
 
-Cree un directorio en su computadora y nómbrelo "SkycoinNodejs" (así es como yo nombré dicho directorio, usted lo puede llamar de cualquier otra forma) y utilizando en Terminal / Símbolo del Sistema __ubíquese en el directorio creado__:
+Cree un directorio en su computadora y nÃ³mbrelo "SkycoinNodejs" (asÃ­ es como yo nombrÃ© dicho directorio, usted lo puede llamar de cualquier otra forma) y utilizando en Terminal / SÃ­mbolo del Sistema __ubÃ­quese en el directorio creado__:
 
 ```bash
 cd /ruta/hasta/el/directorio/SkycoinNodejs
@@ -79,9 +79,9 @@ Puede usar el comando "pwd" para conocer el directorio actual de trabajo
 Agregue ese mismo directorio como un __Directorio de Proyecto__ en Atom:
 
 ![https://cdn-images-1.medium.com/max/800/1\*3B8Zl-M5RvTuHgrzmuF0ag.png](https://cdn-images-1.medium.com/max/800/1*3B8Zl-M5RvTuHgrzmuF0ag.png)
-Seleccione el directorio que acaba de crear y agréguelo como un Directorio de Proyecto
+Seleccione el directorio que acaba de crear y agrÃ©guelo como un Directorio de Proyecto
 
-Ahora haga clic derecho sobre el Directorio de Proyecto en la pestaña de la izquierda y seleccione "Crear Archivo". Nombre ese archivo _main.js_ y agréguele el siguiente código:
+Ahora haga clic derecho sobre el Directorio de Proyecto en la pestaÃ±a de la izquierda y seleccione "Crear Archivo". Nombre ese archivo _main.js_ y agrÃ©guele el siguiente cÃ³digo:
 
 ![https://cdn-images-1.medium.com/max/800/1\*JswKp\_GBsQwMyfsIr9HQ9Q.png](https://cdn-images-1.medium.com/max/800/1*JswKp_GBsQwMyfsIr9HQ9Q.png)
 Agregue el archivo main.js directamente dentro del directorio (e ignore el directorio .git que se muestra en la imagen)
@@ -99,21 +99,21 @@ $ node main.js
 ![https://cdn-images-1.medium.com/max/800/1\*ZcvnpbUTAsA2rrM1FsVCTA.png](https://cdn-images-1.medium.com/max/800/1*ZcvnpbUTAsA2rrM1FsVCTA.png)
 Hello, World!
 
-¡Felicitaciones! __Usted acaba de crear su primera aplicación Node.js__ (que hace muy poco todavía). Hasta este punto, este tutorial no fue nada nuevo para la mayoría y no ha estado relacionado de ninguna forma con la API de Skycoin Explorer. Es por ello que, en el siguiente paso, ¡__realizaremos nuestra primera petición a la API__!
+Â¡Felicitaciones! __Usted acaba de crear su primera aplicaciÃ³n Node.js__ (que hace muy poco todavÃ­a). Hasta este punto, este tutorial no fue nada nuevo para la mayorÃ­a y no ha estado relacionado de ninguna forma con la API de Skycoin Explorer. Es por ello que, en el siguiente paso, Â¡__realizaremos nuestra primera peticiÃ³n a la API__!
 
-Paso 5: Nuestra primera petición a la API de Skycoin Explorer utilizando Node.js
+Paso 5: Nuestra primera peticiÃ³n a la API de Skycoin Explorer utilizando Node.js
 ----
 
-Para poder realizar una llamada a la API, haremos una __petición HTTP__. Esta es exactamente __la misma petición que realiza nuestro navegador__, solo que podemos hacerla desde nuestra aplicación Node.js.
+Para poder realizar una llamada a la API, haremos una __peticiÃ³n HTTP__. Esta es exactamente __la misma peticiÃ³n que realiza nuestro navegador__, solo que podemos hacerla desde nuestra aplicaciÃ³n Node.js.
 
-Existen varias formas de hacer esto con Node.js. Para hacerlo lo más simple posible, __usaremos la petición [HTTP]( https://nodejs.org/api/http.html) por defecto__ que viene con Node.js. Si usted tiene experiencia o le gustaría utilizar otra de las formas, échele un vistazo a [Request](https://github.com/request/request).
+Existen varias formas de hacer esto con Node.js. Para hacerlo lo mÃ¡s simple posible, __usaremos la peticiÃ³n [HTTP]( https://nodejs.org/api/http.html) por defecto__ que viene con Node.js. Si usted tiene experiencia o le gustarÃ­a utilizar otra de las formas, Ã©chele un vistazo a [Request](https://github.com/request/request).
 
 Vamos a editar el archivo _Main.js_ y borrar nuestro console.log que mostraba el mensaje "Hello, World!" en pantalla.
 
-__Agregue el siguiente código__ (y recuerde agregar el _PuertoSkycoin_ apropiado):
+__Agregue el siguiente cÃ³digo__ (y recuerde agregar el _PuertoSkycoin_ apropiado):
 
 ```javascript
-const http = require(‘http’);
+const http = require(â€˜httpâ€™);
 const apiURL = "http://localhost:PuertoSkycoin/api/v1/addresscount"
 http.get(apiURL, res => {
  let body = "";
@@ -127,26 +127,26 @@ http.get(apiURL, res => {
 });
 ```
 
-Antes de adentrarnos en el código, vaya al terminal y ejecute el archivo utilizando el comando
+Antes de adentrarnos en el cÃ³digo, vaya al terminal y ejecute el archivo utilizando el comando
 
 ```bash
 $ node main.js
 ```
 
-y el resultado será:
+y el resultado serÃ¡:
 
 ![https://cdn-images-1.medium.com/max/800/1\*fXfLrnO6WwOzyXuUzuEYeA.png](https://cdn-images-1.medium.com/max/800/1*fXfLrnO6WwOzyXuUzuEYeA.png)
 Node.js devuelve la cantidad actual de direcciones Skycoin
 
-Entendiendo el código
+Entendiendo el cÃ³digo
 ----
 
-¿Qué hacen estas 12 líneas de código?
+Â¿QuÃ© hacen estas 12 lÃ­neas de cÃ³digo?
 
 Ante todo, declaramos las dos Variables http y apiURL como const. Las variables const no pueden ser reasignadas.
 
 ```javascript
-const http = require(‘http’);
+const http = require(â€˜httpâ€™);
 ```
 
 crea una instancia http.Agent personalizada y
@@ -155,7 +155,7 @@ crea una instancia http.Agent personalizada y
 const apiURL = "http://localhost:PuertoSkycoin/api/v1/addresscount"
 ```
 
-hace que el código posterior sea más leíble al almacenar esta larga url en una variable.
+hace que el cÃ³digo posterior sea mÃ¡s leÃ­ble al almacenar esta larga url en una variable.
 
 ```javascript
 http.get(url, res => { 
@@ -163,15 +163,15 @@ http.get(url, res => {
 }
 ```
 
-__Nuestra petición a la API de Skycoin Explorer es una petición GET__. También hubiéramos podido utilizar _http.request()_ pero _http.get()_ ya está configurado para usar GET y además _req.end()_ es llamada automáticamente. Básicamente, como ya sabemos que usaremos una petición GET, entonces usamos _http.get()_.
+__Nuestra peticiÃ³n a la API de Skycoin Explorer es una peticiÃ³n GET__. TambiÃ©n hubiÃ©ramos podido utilizar _http.request()_ pero _http.get()_ ya estÃ¡ configurado para usar GET y ademÃ¡s _req.end()_ es llamada automÃ¡ticamente. BÃ¡sicamente, como ya sabemos que usaremos una peticiÃ³n GET, entonces usamos _http.get()_.
 
-La función res es llamada cuando _es establecida la conexión_.
+La funciÃ³n res es llamada cuando _es establecida la conexiÃ³n_.
 
 ```javascript
 let body = "";
 ```
 
-El flujo que recibimos es almacenado en la variable body. Entonces usamos let para declararla de manera que después pueda ser reasignada si fuera necesario.
+El flujo que recibimos es almacenado en la variable body. Entonces usamos let para declararla de manera que despuÃ©s pueda ser reasignada si fuera necesario.
 
 ```javascript
 res.on("data", data => {
@@ -179,7 +179,7 @@ res.on("data", data => {
  });
 ```
 
-_res.on(...)_ __es llamada cuando recibimos datos__. Y esos datos son entonces almacenados en la variable body recién declarada.
+_res.on(...)_ __es llamada cuando recibimos datos__. Y esos datos son entonces almacenados en la variable body reciÃ©n declarada.
 
 ```javascript
 res.on("end", () => {
@@ -188,27 +188,27 @@ res.on("end", () => {
 });
 ```
 
-_res.on("end"...)_ es llamada __después que se reciben los últimos datos__ de _http.get()_. Como mencioné antes, _http.get()_ obtiene un flujo. Para trabajar con ese objeto de flujo __lo interpretamos como JSON__ usando
+_res.on("end"...)_ es llamada __despuÃ©s que se reciben los Ãºltimos datos__ de _http.get()_. Como mencionÃ© antes, _http.get()_ obtiene un flujo. Para trabajar con ese objeto de flujo __lo interpretamos como JSON__ usando
 
 ```javascript
 body = JSON.parse(body);
 ```
 
-El último paso es nuestra __salida concreta de la API__ usando la función _console.log_.
+El Ãºltimo paso es nuestra __salida concreta de la API__ usando la funciÃ³n _console.log_.
 
-Bono: haga rápidamente una aplicación de línea de comandos
+Bono: haga rÃ¡pidamente una aplicaciÃ³n de lÃ­nea de comandos
 ----
 
-La edición de código es divertida, pero ¿qué le parece __poder personalizar la llamada__ usando la línea de comandos? Usted puede encontrar cómo hacer esto en GitHub: <https://github.com/iaufmc/SkycoinNodejs>
+La ediciÃ³n de cÃ³digo es divertida, pero Â¿quÃ© le parece __poder personalizar la llamada__ usando la lÃ­nea de comandos? Usted puede encontrar cÃ³mo hacer esto en GitHub: <https://github.com/iaufmc/SkycoinNodejs>
 
 ![https://cdn-images-1.medium.com/max/800/1\*nC-x1EUCS5kc89LHV5mvng.gif](https://cdn-images-1.medium.com/max/800/1*nC-x1EUCS5kc89LHV5mvng.gif)
 
-¿Cuál es el próximo paso?
+Â¿CuÃ¡l es el prÃ³ximo paso?
 ----
 
-Hoy hemos aprendido a hacer una __petición a la API de Skycoin Explorer utilizando Node.js__. Teniendo esos conocimientos, podemos __comenzar a desarrollar aplicaciones web que utilicen o muestren la información que la API nos brinda__.
+Hoy hemos aprendido a hacer una __peticiÃ³n a la API de Skycoin Explorer utilizando Node.js__. Teniendo esos conocimientos, podemos __comenzar a desarrollar aplicaciones web que utilicen o muestren la informaciÃ³n que la API nos brinda__.
 
-Si le gustó este tutorial, usted puede enviarme alguna propina en Sky: 2BAEQ9tdibebL5XrozW4nQ7ciu4JnFXhcAS y si lo desea puede comentar y seguirme en Twitter: <https://twitter.com/iaufmc>
+Si le gustÃ³ este tutorial, usted puede enviarme alguna propina en Sky: 2BAEQ9tdibebL5XrozW4nQ7ciu4JnFXhcAS y si lo desea puede comentar y seguirme en Twitter: <https://twitter.com/iaufmc>
 
-¡Gracias por su lectura!
+Â¡Gracias por su lectura!
 
