--- a/01_es.md
+++ b/01_es.md
@@ -18,12 +18,12 @@ __¿Pero cómo se puede hacer uso de estas peticiones?__
 Paso 1: Usted necesita un Nodo Skycoin
 ----
 
-Es posible que alguno de ustedes haya escuchado sobre __Skyminer__. Un Skyminer es un __nodo Skycoin__. Usted puede comprar un Skyminer o construir uno usted mismo. Pero atención, ¡ni siquiera necesita uno!
+Es posible que alguno de ustedes haya escuchado sobre __Skyminer__. Un Skyminer es un clúster de computadoras de placa única usadas principalmente como nodos Skywire. Usted puede también instalar un cliente Skycoin Wallet completo en en una para crear un __nodo Skycoin__. Como Skycoin utiliza hardware abierto, usted puede comprar un minador oficial o construir uno usted mismo. Pero atención, ¡ni siquiera necesita uno!
 
 Existen tres opciones para que usted ejecute un Nodo Skycoin:
-* [Compre](https://www.skycoin.net/skyminer/) un __Skyminer oficial__
-* Construya un __Skyminer usted mismo__
-* [Descargue](https://www.skycoin.net/downloads/) e instale __Skycoin Wallet__
+* [Compre](https://www.skycoin.net/skyminer/) un __Skyminer oficial__ e instale el cliente Skycoin Wallet
+* Construya un __Skyminer usted mismo__ e instale el cliente Skycoin Wallet
+* [Descargue](https://www.skycoin.net/downloads/) e instale __Skycoin Wallet__ en su computadora
 
 Sí, es así de simple: __Skycoin Wallet también le da acceso al Explorer__. Eso significa que ejecutar la Aplicación Skycoin Wallet __le da acceso a la API de Skycoin Explorer__.
 
