refs #1 Arreglo en el 2do articulo, en el paso 1 agregar un link

--- a/02_es.md
+++ b/02_es.md
@@ -32,7 +32,7 @@ Si selecciona cualquier otro mecanismo (Apache, Nginx, PHP) también puede hacer
 Paso 1: El nodo Skycoin
 ----
 
-Como ya he mencionado con anterioridad: por favor siga estas instrucciones y asegúrese de probar las primeras peticiones utilizando su navegador. Si estas pruebas funcionan, ¡excelente! Continúe con el paso 2. Si estas no funcionan, déjeme un mensaje o ¡únase a las comunidades de Skycoin de Telegram!
+Como ya he mencionado con anterioridad: por favor siga estas instrucciones y asegúrese de probar las primeras peticiones utilizando su navegador. Si estas pruebas funcionan, ¡excelente! Continúe con el paso 2. Si estas no funcionan, déjeme un mensaje o ¡únase a las [comunidades de Skycoin de Telegram](http://t.me/Skycoin)!
 
 Paso 2: Instale Node.js
 ----
