refs #1 En el 1er articulo, en el paso 1 eliminar palabra repetida. En el 2do agregar un OJO como recordatorio de que debe ir el enlace al 1er articulo traducido, no al original.

--- a/01_es.md
+++ b/01_es.md
@@ -18,7 +18,7 @@ __¿Pero cómo se puede hacer uso de estas peticiones?__
 Paso 1: Usted necesita un Nodo Skycoin
 ----
 
-Es posible que alguno de ustedes haya escuchado sobre __Skyminer__. Un Skyminer es un clúster de computadoras de placa única usadas principalmente como nodos Skywire. Usted puede también instalar un cliente Skycoin Wallet completo en en una para crear un __nodo Skycoin__. Como Skycoin utiliza hardware abierto, usted puede comprar un minador oficial o construir uno usted mismo. Pero atención, ¡ni siquiera necesita uno!
+Es posible que alguno de ustedes haya escuchado sobre __Skyminer__. Un Skyminer es un clúster de computadoras de placa única usadas principalmente como nodos Skywire. Usted puede también instalar un cliente Skycoin Wallet completo en una para crear un __nodo Skycoin__. Como Skycoin utiliza hardware abierto, usted puede comprar un minador oficial o construir uno usted mismo. Pero atención, ¡ni siquiera necesita uno!
 
 Existen tres opciones para que usted ejecute un Nodo Skycoin:
 * [Compre](https://www.skycoin.net/skyminer/) un __Skyminer oficial__ e instale el cliente Skycoin Wallet
