--- a/02_es.md
+++ b/02_es.md
@@ -6,7 +6,9 @@ Conectar una Aplicación Node.js a la API de Skycoin Explorer
 ![https://cdn-images-1.medium.com/max/800/1\*nC-x1EUCS5kc89LHV5mvng.gif](https://cdn-images-1.medium.com/max/800/1*nC-x1EUCS5kc89LHV5mvng.gif)
 ¿Interesado? ¡Continúe leyendo y encontrará como hacerlo usted mismo!
 
-Para comenzar es necesario tener a su disposición un Nodo Skycoin ejecutándose. Si no lo tiene visite mi [tutorial anterior](https://medium.com/@iaufmc39/how-to-use-the-skycoin-explorer-api-160577347e30) (solo necesita tener Skycoin Wallet ejecutándose en su computadora)
+Para comenzar es necesario tener a su disposición un Nodo Skycoin ejecutándose. Si no lo tiene visite mi 
+# (OJO SUSTITUIR ESTE ENLACE POR EL DEL ARTICULO TRADUCIDO) #
+ [tutorial anterior](https://medium.com/@iaufmc39/how-to-use-the-skycoin-explorer-api-160577347e30) (solo necesita tener Skycoin Wallet ejecutándose en su computadora)
 
 __¿Ya tiene instalado Node.js y un IDE? ¡Avance hasta el Paso 4!__
 
